Slněn domácí úkol.

--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
         <div class="obal">
 
             <!-- tvoje HTML sem -->
-
-            Ajajaj, tento týden tu nic není, je to zcela na tobě :)
-
-            Zadání ve vysledek.png
+<img src="vysledek.png">
 
 
 
